compiler-tests/src/test/data/diagnostic/functioninject/CannotHaveExtensionReceivers.kt
// RENDER_DIAGNOSTICS_FULL_TEXT
// ENABLE_TOP_LEVEL_FUNCTION_INJECTION
@Inject
fun <!FUNCTION_INJECT_ERROR!>String<!>.Example() {

}
